package org.scotia.githubfetcher.common

object Constants {
    const val ERROR_STRING = "ERROR"
    const val BADGE_FORKS_MIN = 5000
    const val DATE_FORMAT_GITHUB = "yyyy-MM-dd'T'HH:mm:ss'Z'"
    const val DATE_FORMAT_APP = "MMM dd yyyy 'at' HH:mm"

    // test tags for UI elements
    const val TAG_USER_SECTION = "UserDetailSection.TAG"
    const val TAG_LOADING_VIEW = "LoadingView.TAG"
    const val TAG_INPUT_VIEW = "MainScreenInput.TAG"
    const val TAG_REPO_LIST = "MainScreenListRepos.TAG"
    const val TAG_FORKS = "USERDetail.forks.total.TAG"
    const val TAG_USER_DETAIL_NAME = "USERDetail.name.TAG"
    const val TAG_LIST_ITEM = "MainScreenList.item.TAG"
}
